hphp/hack/test/typecheck/strict_switch/not_bool.php.exp
ERROR: File "not_bool.php", line 10, characters 11-12:
`switch` statement nonexhaustive; at least the following cases are missing: `default`, `int`, `enum`, `string` (Typing[4019])
  File "not_bool.php", line 10, characters 11-12:
  only unions and intersections of bool, null and enums can be switched on without a default
